# 3.10.5

./: CMakeLists.txt  Figure.h  Quadrilateral.cpp  Quadrilateral.h  Rectangl.h  Right_triangle.h  Square.h  Triangle.cpp  Triangle.h  main.cpp
